<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAdmissionActivity">

    <View
        android:id="@+id/view7"
        android:layout_width="408dp"
        android:layout_height="98dp"
        android:background="#0F1545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="52dp"
        android:background="@android:color/background_light"
        android:text="@string/heading_new_admission"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_student_id"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_student_name"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_date_of_birth"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_mobile_no"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_email"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:text="@string/txt_gender"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.532" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/txt_m_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/txt_dob"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_s_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_s_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txt_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/button10"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:text="@string/btn_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="350dp"
        android:layout_height="205dp"
        android:background="@android:color/darker_gray"
        android:text="@string/txt_select"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:text="@string/check_b1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="130dp"
        android:layout_height="26dp"
        android:text="@string/check_b2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="130dp"
        android:layout_height="26dp"
        android:text="@string/check_b3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="0.765" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="130dp"
        android:layout_height="26dp"
        android:text="@string/check_b4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

</androidx.constraintlayout.widget.ConstraintLayout>