<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceActivity2">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="408dp"
        android:layout_height="98dp"
        android:background="#151B47"
        android:text="@string/txt_heading"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:text="@string/txt_attendance"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/txt_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:text="@string/txt_course"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.364" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/txt_date1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_course1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/button11"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:text="@string/btn_cal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#774646"
        android:text="@string/txt1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#BAA583"
        android:text="@string/txt4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#F1BAA9"
        android:text="@string/txt3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.572" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#D57F7F"
        android:text="@string/txt2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        android:text="@string/txt5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="#AFAF73"
        android:text="@string/txt6"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

</androidx.constraintlayout.widget.ConstraintLayout>